# spin-full-stack-wasm

./: spin.toml
api/: Cargo.toml
api/src/: lib.rs
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.svelte
web/src/lib/: todo.js
