[package]
name = "api"
authors = ["MikeTeddyOmondi <mike_omondi@outlook.com>"]
description = "api "
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
log = "0.4.20"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.107"
simple_logger = "4.2.0"
# The Spin SDK.
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.4.1" }

[workspace]
